# ARI-web

./: .env.example  .gitignore  .replit  Procfile  ai_analysis.py  ai_insights.py  ai_simulation.py  analysis.py  app.py  apple_audience_data.py  apple_phone_campaign.txt  apple_tv_campaign.txt  database.py  marketing_trends.py  pyproject.toml  replit.nix  requirements.txt  test_app.py  test_playwright.py  utils.py  utils_metrics.py
.streamlit/: config.toml
app/: main.py
assets/: content.py  dashboard_icon.py  learning_tips.py  styles.css  styles.py  tech_icon.py
attached_assets/: ARI_AdvancedMetricAnalyzer.html  ARI_Hyperdimensional_Matrix.html  Client.docx  Competitor_Response_Strategy_Tool.html  Competitor_Strategy_Analyzer.html  Competitor_Strategy_NoCampaignInput.html  Fortune500_Strategy_Tool_Corrected.html  Pasted--div-style-display-flex-align-items-center-margin-bottom-10px-div-style-flex-grow-1-1743015981608.txt  Pasted-AttributeError-NoneType-object-has-no-attribute-wrapOn-Traceback-File-home-runner-workspac-1743276754395.txt  Pasted-NIKE-x-RUNNING-HO2024-RFP-Live-Date-9-5-2024-RFP-DUE-TO-PMG-Monday-8-12-by-4CT-SUBMITTED-PRO-1742993858367.txt  Pasted-Source-file-changed-ARI-Audience-Resonance-Index-Enterprise-Marketing-Intelligence-Platform--1743456534052.txt
core/: ai_insights.py  ai_ranking.py  ai_utils.py  ai_warmup.py  analysis.py  aristotle_mapper.py  audience_simulation.py  behavioral_adjustments.py  benchmark_config.py  brief_journey.py  census_api.py  consumer_journey.py  data_integration.py  disclaimer.py  epsilon_mapper.py  export_orchestrator.py  (+13 more)
(+55 files in other folders)
