[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
]
